# aprx-tools

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  package.json  pyproject.toml
.github/workflows/: release.yml
aprx_tools/: __main__.py  bootstrap.py  compare.py  connections.py  explode.py  hooks.py  install.py  pack.py  project_config.py  transform.py  util.py  verify.py
dev-hooks/: pre-push
docs/agent/: .gitignore  CONTEXT.md
docs/agent/adr/: 0001-mode-declared-in-aprx-json.md  0002-pure-core-transform-seam.md
npm/: postinstall.js
presentation/: README.md  demo.tape  qa.md  setup-demo.sh  slide.html  slides.md
tests/: conftest.py  test_bootstrap.py  test_compare.py  test_connections.py  test_explode.py  test_explode_seam.py  test_hooks_build.py  test_hooks_pre_commit.py  test_install.py  test_pack.py  test_pack_seam.py  test_project_config.py  test_roundtrip.py  test_transform.py  test_util.py  test_verify.py
tests/fixtures/simple/: aprx.json  simple.aprx  simple.atbx
tests/fixtures/simple/GpMessages/: 278303136205900
tests/fixtures/simple/simple.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000001.gdbtablx  a00000004.CatItemsByPhysicalName.atx  a00000004.CatItemsByType.atx  a00000004.FDO_UUID.atx  a00000004.gdbtable  a00000004.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a0000000b.gdbtable  a0000000c.gdbtable  a0000000d.gdbtable  a0000000e.gdbtable  timestamps
