[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aprx-tools"
version = "0.1.0"
description = "Version-control tooling for ArcGIS .aprx project files"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
aprx = "aprx_tools.__main__:main"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["aprx_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
